2013-06-21  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: set FD_CLOEXEC also when receiving device fd from
	fusermount

2013-06-20  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix multiple close of device fd.  Reported by Dan
	Greenfield

2013-03-19  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix thread cancel race.  Exiting a worker my race with
	cancelling that same worker.  This caused a segmenation
	fault. Reported and tested by Anatol Pomozov

2013-02-20  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: change the type of fuse_ino_t from 'unsigned long' to
	'uint64_t'

	* libfuse: use O_CLOEXEC flag when opening /dev/fuse device.
	Patch by Richard W.M. Jones

	* libfuse: don't force -D_FILE_OFFSET_BITS=64 in pkgconfig file.
	Patch by Richard W.M. Jones

2013-02-19  Miklos Szeredi <miklos@szeredi.hu>

	* fuse_daemonize(): chdir to "/" even if not running in the
	background for consistency.  Reported by Vladimir Rutsky

2013-02-18  Miklos Szeredi <miklos@szeredi.hu>

	* fuse_opt_parse(): when storing a newly allocated string for
	format "%s", free the previous value stored at that location.
	Reported by Marco Schuster

2013-02-07  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: add readdirplus support in fuse_lowlevel_ops.  Patch by
	Feng Shuo

	* libfuse: add poll_events to fuse_file_info.  Patch by Enke Chen

	* libfuse: fix fs cleanup.  Reported by Eric Wong

	* libfuse: pass security context options to kernel.  Patch by
	Dalvik Khertel

	* libfuse: remove deprecated features:
	- fuse_is_lib_option()
	- fuse_invalidate()
	- fuse_set_getcontext_func()
	- fuse_loop_mt_proc()
	- fuse_read_cmd()
	- fuse_process_cmd()
	- fuse_setup()
	- fuse_teardown()
	- fuse_exited()
	- fuse_lowlevel_is_lib_option()
	- fuse_operations.getdir()
	- fuse_operations.utime()
	- fuse_operations.utime_omit_ok

2013-02-06  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: set close-on-exec flag on pipe file descriptors.  Patch
	by Eric Wong

	* libfuse: add missing INIT flags
