@@ -8,6 +8,7 @@ AC_CONFIG_HEADERS(include/config.h)
 
 AC_PROG_LIBTOOL
 AC_PROG_CC
+AC_SYS_LARGEFILE
 AC_PROG_MKDIR_P
 AM_PROG_CC_C_O
 
