@@ -21,6 +21,7 @@
  * \include fioclient.c
  */
 
+#include <config.h>
 
 #include <sys/types.h>
 #include <sys/fcntl.h>
