@@ -35,6 +35,8 @@
 
 #define FUSE_USE_VERSION 30
 
+#include <config.h>
+
 #include <fuse.h>
 #include <stdio.h>
 #include <string.h>
