@@ -39,6 +39,8 @@
 
 #define FUSE_USE_VERSION 30
 
+#include <config.h>
+
 #include <fuse_lowlevel.h>
 #include <stdio.h>
 #include <stdlib.h>
