@@ -8,4 +8,4 @@ Description: Filesystem in Userspace
 Version: @VERSION@
 Libs: -L${libdir} -lfuse -pthread
 Libs.private: @libfuse_libs@
-Cflags: -I${includedir}/fuse -D_FILE_OFFSET_BITS=64
+Cflags: -I${includedir}/fuse
