@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 AM_CPPFLAGS = -I$(top_srcdir)/include -DFUSERMOUNT_DIR=\"$(bindir)\" \
- -D_FILE_OFFSET_BITS=64 -D_REENTRANT -DFUSE_USE_VERSION=30
+ -D_REENTRANT -DFUSE_USE_VERSION=30
 
 lib_LTLIBRARIES = libfuse.la libulockmgr.la
 
