@@ -7,6 +7,7 @@
   See the file COPYING.LIB.
 */
 
+#include "config.h"
 #include "cuse_lowlevel.h"
 #include "fuse_kernel.h"
 #include "fuse_i.h"
