@@ -8,6 +8,8 @@
 
 #define FUSE_USE_VERSION 30
 
+#include <config.h>
+
 #include <fuse.h>
 #include <stdio.h>
 #include <stdlib.h>
