@@ -7,6 +7,7 @@
 */
 
 /* #define DEBUG 1 */
+#include <config.h>
 
 #include <stdio.h>
 #include <stdlib.h>
